--- a/css/estilo1.css
+++ b/css/estilo1.css
@@ -28,8 +28,9 @@ body {
 	background-size:cover;
 	color: rgba(0, 0, 0, 0.938);
 	/*max-width: 1050;*/
-	font-family: "Brush Script MT", cursive ;
-}
+	font-family: "Brush Script MT", cursive;
+	text-align: justify;
+	}
 
 /* Formatação do menu */
 nav {
@@ -88,13 +89,32 @@ main{
 	background-color: white;
 	width: 100%vh;
 	margin: auto;
+	padding: 0px 5px 0px 5px;
 }
 
 main h1 {
-	background-image: linear-gradient(to right, #F4750F, transparent);
-	
+	/*background-image: linear-gradient(to right, #F4750F, transparent);*/
+	background-color: var(--cor-secundaria);
+	padding-left: 1.5vh;
 }
 
+section p{
+	padding: 0vh 1.5vh 5vh 1.5vh;
+}
+section.corpo{
+	background-color: white;
+	color: black;
+}
+
+
+
+section.imagem{
+	background-image: url('../imagens/fundo_academia2.jpg');
+	background-position: left center;
+	background-repeat: no-repeat;
+	background-size:cover;
+	background-attachment: fixed;
+}
 /* Formatação do rodape */
 footer{
 	background-color: none;
